[package]
name = "virus_game_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_rapier2d = "0.14.1"
bevy_rapier3d = "0.14.1"
rand = "0.8.5"
bevy_prototype_lyon = "0.5.0"